# DashboardPrototype

./: .gitmodules  CMakeLists.txt  README.md
include/: application.hpp  renderer.hpp  shader.hpp  window.hpp
resources/shaders/: frag.glsl  vert.glsl
src/: application.cpp  main.cpp  renderer.cpp  shader.cpp  window.cpp
